--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container text-center">
-<h1>New User</h1>
+<div class="container text-center mt-5">
+<div class="h2 py-2 text-primary">New Account</div>
 
 <%= render 'form', user: @user %>
 <i class="fa fa-backward">
