--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container start-page h-100">
    <div class="h-50">
-      <div class="h1 text-center main-title">Project Name Italic</div>
+      <div class="h1 text-center main-title pb-5">Project Name Italic</div>
 
       <div class="text-center text-uppercase mt-5 px-2">
           <div class="btn btn-block btn-lg btn-success shadow p-3 mb-1 rounded">
