--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container start-page h-100">
-   <div class="h-50">
-      <div class="h1 text-center main-title pb-5">Project Name Italic</div>
+  
+      <div class="h1 text-center main-title pb-5 h-75">Project Name Italic</div>
 
-      <div class="text-center text-uppercase mt-5 px-2">
+      <div class="text-center text-uppercase mt-5 px-2 h-25">
           <div class="btn btn-block btn-lg btn-success shadow p-3 mb-1 rounded">
          <i class="fa fa-sign-in">
           <%= link_to "Log in", login_path, :class => "btn" %></i>
@@ -12,5 +12,5 @@
           <%= link_to "Sign up", new_user_path, :class => "btn"  %></i>
        </div>
     </div>
-    </div>
+    
 </div>
