--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="h2 py-2 header h-25">
-   <i class="fa fa-backward signup_page mt-2 pl-2">
+   <i class="fa fa-backward signup_page mt-2 pl-2 pt-3">
       <%= link_to 'BACK', root_path %>
    </i>
     <i class="fa fa-user mx-2"></i>
