--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,26 @@
-<div class="container text-center">
-<h1>"user#show"</h1>
+ <div class="display-4 py-2 header text-bold">
+    <%= @user.name %>
+   </div>
+<div class="container text-center h3">
+
+
 <p id="notice"><%= notice %></p>
 <p>
  
- <h2>
-<%= user_gravatar @user %><br>
- <%= @user.name %>
- </h2> 
-</p>
-<p>
-  <a href="#"  class="btn btn-lg btn-success my-1">Account Settings<a><br>
-  <%= link_to 'All Transactions', transactions_path, class: "btn btn-lg btn-success my-1" %><br>
-  <%= link_to 'AllExternal Transactions', external_path, class: "btn btn-lg btn-success my-1" %><br>
-  <%= link_to 'All Groups', groups_path, class: "btn btn-lg btn-success my-1" %><br>
-</p>
+ <div class="my-5">
+    <%= user_gravatar @user %><br>
+ </div> 
+   <div class="user_show">
+  <%= link_to 'All Transactions', transactions_path, class: "btn btn-lg btn-block btn-success" %><br>
+  <%= link_to 'AllExternal Transactions', external_path, class: "btn btn-lg btn-block btn-success" %><br>
+  <%= link_to 'All Groups', groups_path, class: "btn btn-lg btn-block btn-success" %><br>
+</div>
+<div class="mt-3 display-6 text-white">
 <i class="fa fa-edit"></i>
 <%= link_to 'Edit', edit_user_path(@user) %>
 </i> |
-<i class="fas fa-backward">
-<%= link_to 'Back', users_path %>
-</i>
+<i class="fa fa-backward"></i>
+<%= link_to 'All Users', users_path %>   <!-- root_path -->
+
+</div>
 </div>
