--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container start-page h-100">
   
-      <div class="h1 text-center main-title pb-5 h-75">Project Name Italic</div>
+      <div class="h1 text-center main-title pb-5 h-75 font-weight-bold">Group Our Transactions</div>
 
       <div class="text-center text-uppercase mt-5 px-2 h-25">
           <div class="btn btn-block btn-lg btn-success shadow p-3 mb-1 rounded">
-         <i class="fa fa-sign-in">
+         <i class="fa fa-sign-in fa-2x">
           <%= link_to "Log in", login_path, :class => "btn" %></i>
           </div>
           <div class="btn btn-block btn-lg btn-primary shadow p-3 mb-2 rounded">
-         <i class="fa fa-sign-in">
+         <i class="fa fa-sign-in  fa-2x">
           <%= link_to "Sign up", new_user_path, :class => "btn"  %></i>
        </div>
     </div>
