--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,7 +39,9 @@ i > a,
 
 .main-title {
     font-family: 'Dancing Script', cursive;
-    font-size: 3.5em;
+    font-size: 5.5em;
+    font-weight: bold !important;
+    color: #3674BB;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
