add style for index groups and transactions

--- a/app/views/pages/external.html.erb
+++ b/app/views/pages/external.html.erb
@@ -1,5 +1,7 @@
-<div class="container text-center">
-     <h2> External transactions</h2> 
+<div class="text-center">
+      <div class="display-4 py-2 header text-bold">
+         External Transactions
+     </div>
      <p>
         Total amount: $ <%= @external_total %>
      </p>
