--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -12,15 +12,15 @@
     <%= f.text_field :name, class: "form-control", placeholder: "Name for group*"  %>
    </div>
   <div class="field">
-    <%= f.radio_button :icon, 'fa fa-phone' %><i class="fa fa-phone mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-phone fa-2x' %><i class="fa fa-phone mx-3" aria-hidden="true"></i>
     <%= f.radio_button :icon, 'fa fa-graduation-cap' %> <i class="fa fa-graduation-cap mx-3" aria-hidden="true"></i>
     <%= f.radio_button :icon, 'fa fa-birthday-cake' %><i class="fa fa-birthday-cake mx-3" aria-hidden="true"></i>
     <%= f.radio_button :icon, 'fa fa-bed' %> <i class="fa fa-bed mx-3" aria-hidden="true"></i>
     <%= f.radio_button :icon, 'fa fa-cutlery' %> <i class="fa fa-cutlery mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-shopping-cart' %> <i class="fa fa-shopping-cart mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-shopping-cart fa-2x' %> <i class="fa fa-shopping-cart mx-3" aria-hidden="true"></i>
     <%= f.radio_button :icon, 'fa fa-tree' %> <i class="fa fa-tree mx-3" aria-hidden="true"></i>
     <%= f.radio_button :icon, 'fa fa-bus' %><i class="fa fa-bus mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-taxi' %> <i class="fa fa-taxi mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-taxi fa-2x' %> <i class="fa fa-taxi mx-3" aria-hidden="true"></i>
     
   </p>
   <%= f.submit class: "submit btn btn-success" %>
