--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,25 +1,29 @@
- <div class="container text-center">
- |  <%= link_to 'New Group', new_group_path %>
-
-<h1>Groups</h1>
-  <% @groups.each do |group| %>
-
-  
-      <%= link_to group.name.capitalize, group %><br>
-      <i class= "<%= group.icon %>" ></i>
-      <%= group.created_at %>
-        
+ <div class="text-center">
+    <div class="display-4 py-2 header text-bold">
+       Groups
+    </div>
+    <div class="mt-3">
+       <% @groups.each do |group| %>
+         <span class="h3">
+           <%= link_to group.name.capitalize, group %><br>
+         </span>
+         <i class= "<%= group.icon %> fa-2x mr-5 text-warning" ></i>
+         <span class="creat_date">
+           <%= group.created_at %>
+          </span>
     <% if current_user.id == group.user.id %> 
-      <i class="fa fa-edit">
-       <%= link_to 'Edit', edit_group_path(group) %>
+      <i class="fa fa-edit fa-2x ml-5 text-warning">
+       <%= link_to '', edit_group_path(group) %>
        </i>
-       <i class="fa fa-trash">
-       <%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %><br>
+       <i class="fa fa-trash fa-2x ml-5 text-warning">
+       <%= link_to '', group, method: :delete, data: { confirm: 'Are you sure?' } %><br>
        </i>
      <% end %>
-     <hr><hr>
+     <hr>
     <% end %>
-    </p> <br>
+    </p> 
 <br>
-<%= link_to 'Create New Group', new_group_path, class: "btn btn-lg btn-success" %>
+     </div>
+<%= link_to 'New Group', new_group_path, class: "btn btn-lg btn-block btn-success btn-outline-light" %>
+  
 </div>
