--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -8,22 +8,22 @@
     </ul>
   <% end %>
 
-  <div class="field">
+  <div class="field mb-3">
     <%= f.text_field :name, class: "form-control", placeholder: "Name for group*"  %>
    </div>
-  <div class="field">
-    <%= f.radio_button :icon, 'fa fa-phone fa-2x' %><i class="fa fa-phone mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-graduation-cap' %> <i class="fa fa-graduation-cap mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-birthday-cake' %><i class="fa fa-birthday-cake mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-bed' %> <i class="fa fa-bed mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-cutlery' %> <i class="fa fa-cutlery mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-shopping-cart fa-2x' %> <i class="fa fa-shopping-cart mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-tree' %> <i class="fa fa-tree mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-bus' %><i class="fa fa-bus mx-3" aria-hidden="true"></i>
-    <%= f.radio_button :icon, 'fa fa-taxi fa-2x' %> <i class="fa fa-taxi mx-3" aria-hidden="true"></i>
+  <div class="field m-2">
+    <%= f.radio_button :icon, 'fa fa-phone fa-2x' %><i class="fa fa-phone fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-graduation-cap' %> <i class="fa fa-graduation-cap fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-birthday-cake' %><i class="fa fa-birthday-cake fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-bed' %> <i class="fa fa-bed fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-cutlery' %> <i class="fa fa-cutlery fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-shopping-cart fa-2x' %> <i class="fa fa-shopping-cart fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-tree' %> <i class="fa fa-tree fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-bus' %><i class="fa fa-bus fa-3x mx-3" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-taxi fa-2x' %> <i class="fa fa-taxi fa-3x mx-3" aria-hidden="true"></i>
     
   </p>
-  <%= f.submit class: "submit btn btn-success" %>
+  <%= f.submit class: "submit btn btn-lg btn-success" %>
 
 </div>
 <!--
