--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,8 +1,22 @@
-<div class="container text-center">
-<h1>New Transaction</h1>
+<div class="text-center">
+   <div class="display-4 py-2 header text-bold">
+      New Transaction</div>
+<div class="my-5">
+     <%= render 'form', transaction: @transaction %>
+</div>
+<div>
+   <%= link_to transactions_path do %> 
+            <span class="button text-success">
+             <i class="fa fa-backward fa-3x  mt-3" aria-hidden="true"></i>
+            </span>
+          <%end %> 
 
-<%= render 'form', transaction: @transaction %>
-<i class="fa fa-backward">
-<%= link_to 'Back', transactions_path %>
-</i>
+    </div>
+    <div>
+    <%= link_to user_path(current_user) do %> 
+            <span class="button text-warning">
+             <i class="fa fa-backward fa-3x  mt-3" aria-hidden="true"></i>
+            </span>
+          <%end %>  
+          </div>
 </div>
