--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,23 +1,35 @@
 <div class="text-center">
 
-<div class="h4 py-2 header text-bold">
+<div class="display-4 py-2 header text-bold">
          <span> DETAILS
-         </span><br>
+         </span>
          </div>
-  <strong>Name:</strong>
-  <%= @transaction.name %>
-</p>
+  <div class="mt-5"> Transaction`s Name:
+    <span class="h2 text-uppercase text-primary ml-3">
+       <%= @transaction.name %>
+       </span>
+   </div>
 
 <p>
-  <strong>Total payment: </strong>
-  $<%= @transaction.amount %>
+  Total payment: 
+    <strong>$<%= @transaction.amount %></strong>
 </p>
 
-<p><%= @transaction.created_at %></p>
-<i class="fa fa-edit fa-2x mx-3 text-warning"> </i>
-<%= link_to 'Edit', edit_transaction_path(@transaction) %> ||
+<p> 
+<strong>Created at:</strong>
+  <%= @transaction.created_at %>
+  </p>
 
-<i class="fa fa-backward fa-2x mx-3 text-warning">
-<%= link_to 'Back', transactions_path %>
-</i>
+  <%= link_to edit_transaction_path(@transaction) do %>
+    <span class="button text-warning"> 
+      <i class="fa fa-edit fa-3x mx-3"  aria-hidden="true"></i>
+    </span> 
+  <%end %>  ||
+
+  <%= link_to transactions_path do %>
+    <span class="button text-warning"> 
+      <i class="fa fa-backward fa-3x mx-3"  aria-hidden="true"></i>
+    </span> 
+  <%end %> 
+
 </div>
