--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,8 +13,10 @@
 </div>
 <div class="mt-3 display-6 text-white">
 
-<i class="fa fa-backward text-primary"></i>
-<%= link_to 'BACK/All Users', users_path %>   <!-- root_path -->
-
+<%= link_to logout_path, method: :delete do %>
+          <span class="button text-primary">
+             <i class="fa fa-sign-out  fa-3x ml-2 text-primary" aria-hidden="true"></i>
+            </span>
+          <%end %> 
 </div>
 </div>
