--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -29,11 +29,9 @@
         <td>$<%= transaction.amount %></td>
         <td><%= transaction.created_at%></td>
         <td> <% if current_user.id == transaction.user.id%>
-            <i class="fa fa-edit fa-2x  text-warning">
-               <%= link_to 'Edit', edit_transaction_path(transaction) %>
-               </i> ||
+            
                <i class="fa fa-trash fa-2x  text-warning">
-               <%= link_to 'Back', transaction, method: :delete, data: { confirm: 'Are you sure?' } %>
+               <%= link_to 'Delete', transaction, method: :delete, data: { confirm: 'Are you sure?' } %>
                </i>
         </td>
             <% end %>
