fix stylelint errors

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .start-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 0 15;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin: 0 15px;
 }
