--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="nav user-info">
    
-       <% if logged_in? %>
-          <%= link_to user_path(current_user) do %> 
-            <span class="button text-primary">
-             <i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
-            </span>
-          <%end %> 
-           <p class="mx-2 text-primary">||</p>
-  
-          <%= link_to logout_path, method: :delete do %>
-          <span class="button text-primary">
-             <i class="fa fa-sign-out  fa-2x ml-2 text-primary" aria-hidden="true"></i>
-            </span>
-          <%end %> 
-        <% end %>
+         <%= nav_profile %>
     
     </div>
  </nav>
