--- a/app/views/pages/external.html.erb
+++ b/app/views/pages/external.html.erb
@@ -44,8 +44,8 @@
 </div>
 <div>
 <%= link_to user_path(current_user) do %> 
-            <span class="button text-warning">
-             <i class="fa fa-backward fa-2x  mt-3" aria-hidden="true"></i>
+            <span class="button text-success">
+             <i class="fa fa-backward fa-3x  mt-3" aria-hidden="true"></i>
             </span>
           <%end %>  
           </div>
