--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -43,8 +43,8 @@
 </div>
 <%= link_to 'Add Transaction', new_transaction_path, class: "btn btn-lg btn-block btn-success" %>
  <%= link_to user_path(current_user) do %> 
-            <span class="button text-warning">
-             <i class="fa fa-backward fa-2x  mt-3" aria-hidden="true"></i>
+            <span class="button text-success">
+             <i class="fa fa-backward fa-3x  mt-3" aria-hidden="true"></i>
             </span>
           <%end %>  
 </div>
