--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -19,12 +19,19 @@
 <strong>Created at:</strong>
   <%= @transaction.created_at %>
   </p>
-
-  
+<div>
   <%= link_to transactions_path do %>
     <span class="button text-warning"> 
       <i class="fa fa-backward fa-3x mx-3"  aria-hidden="true"></i>
     </span> 
   <%end %> 
+  </div>
+  <div>
+<%= link_to user_path(current_user) do %> 
+            <span class="button text-success">
+             <i class="fa fa-backward fa-3x  mt-3" aria-hidden="true"></i>
+            </span>
+          <%end %>  
+          </div>
 
 </div>
