--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
     <%= f.email_field :email, class: "form-control", placeholder: "Your Email*" %>
   </div>
  
-  <div class="form-group form-icons text-center">
+  <div class="form-group form-icons text-center mb-0">
        
       <%= f.button "SUBMIT", class: "btn btn-primary btn-block btn-lg text-center", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>  Just a moment..." } %>
   </div>
