--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
  <div class="text-center">
     <div class="display-4 py-2 header text-bold">
-       Groups
+       All Groups
     </div>
     <div class="mt-3">
        <% @groups.each do |group| %>
@@ -11,19 +11,16 @@
          <span class="creat_date mx-3">
            <%= group.created_at %>
           </span>
-    <% if current_user.id == group.user.id %> 
-      
-       <i class="fa fa-trash fa-2x mx-5 text-warning">
-       <%= link_to 'Delete', group, method: :delete, data: { confirm: 'Are you sure?' } %><br>
-       </i>
-     <% end %>
-     <hr>
-    <% end %>
-    </p> 
+         <% if current_user.id == group.user.id %> 
+          <i class="fa fa-trash fa-2x mx-5 text-warning">
+             <%= link_to 'Delete', group, method: :delete, data: { confirm: 'Are you sure?' } %><br>
+          </i>
+          <% end %>
+           <hr>
+           <% end %>
 <br>
      </div>
-
-    
+ 
 <%= link_to 'NEW GROUP', new_group_path, class: "btn btn-lg btn-block btn-success btn-outline-light" %>
   
   <%= link_to user_path(current_user) do %> 
