--- a/app/views/pages/external.html.erb
+++ b/app/views/pages/external.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
       <div class="display-4 py-2 header text-bold">
          <span>
-         External Transactions
+         My External Transactions
          </span><br>
      <span class="h5 text-uppercase">Total amount:
      <span class="h4 font-weight-bold">  $ 
