--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
   <div class="display-3 py-2 header text-bold">
      <span>
-         Transactions
+        My Transactions
          </span><br>
      <span class="h5 text-uppercase">Total amount:
         <% @transactions.first(1).each do |transaction| %>
